--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -59,6 +59,7 @@
 			<!-- Actions -->
 				<section>
 					<ul class="actions stacked">
+						<li><%= button_to "logout", destroy_user_session_path, method: :delete %></li>
 						<li><a href="#" class="button large fit">Log In</a></li>
 					</ul>
 				</section>
