--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -47,6 +47,7 @@
 				<section>
 					<ul class="actions stacked">
 						<% if user_signed_in? %>
+							<li><%= link_to "Profile", edit_user_registration_path, :class => "button large fit" %></li>
 							<li><%= button_to "Logout", destroy_user_session_path, method: :delete, :class => "button large fit" %></li>
 						<% else %>
 							<li><%= link_to "Register", new_user_registration_path, class: "button large fit" %></li>
