--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,7 +1,7 @@
 <div id="wrapper">
 	<!-- Header -->
 		<header id="header">
-			<h1><a href="index.html">Samuel Laforme</a></h1>
+			<h1><a href="/">Samuel Laforme</a></h1>
 			<nav class="links">
 				<ul>
 					<li><a href="/">Blog</a></li>
@@ -26,18 +26,6 @@
 							<a href="#">
 								<h3>Lorem ipsum</h3>
 								<p>Feugiat tempus veroeros dolor</p>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<h3>Dolor sit amet</h3>
-								<p>Sed vitae justo condimentum</p>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<h3>Feugiat veroeros</h3>
-								<p>Phasellus sed ultricies mi congue</p>
 							</a>
 						</li>
 					</ul>
