--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,86 +2,80 @@
 <div id="main">
 
     <!-- Post -->
-        <article class="post">
-            <header>
-                <div class="title">
-                    <h2><a href="single.html">Magna sed adipiscing</a></h2>
-                    <p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
-                </div>
-                <div class="meta">
-                    <time class="published" datetime="2015-11-01">November 1, 2015</time>
-                    <a href="#" class="author"><span class="name">Jane Doe</span><img src="images/avatar.jpg" alt="" /></a>
-                </div>
-            </header>
-            <a href="single.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-            <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-            <footer>
-                <ul class="actions">
-                    <li><a href="single.html" class="button large">Continue Reading</a></li>
-                </ul>
-                <ul class="stats">
-                    <li><a href="#">General</a></li>
-                    <li><a href="#" class="icon solid fa-heart">28</a></li>
-                    <li><a href="#" class="icon solid fa-comment">128</a></li>
-                </ul>
-            </footer>
-        </article>
+	<% @articles.each do |article| %>
+		<article class="post">
+			<header>
+				<div class="title">
+					<h2><a href="/article"><%= article.title %></a></h2>
+					<p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
+				</div>
+				<div class="meta">
+					<time class="published" datetime="2015-11-01">November 1, 2015</time>
+					<a href="#" class="author"><span class="name">Jane Doe</span><img src="images/avatar.jpg" alt="" /></a>
+				</div>
+			</header>
+			<a href="/article" class="image featured"><img src="<%= article.image_url %>" alt="" /></a>
+			<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+			<footer>
+				<ul class="actions">
+					<li><a href="/article" class="button large">Continue Reading</a></li>
+				</ul>
+				<ul class="stats">
+					<li><a href="#">General</a></li>
+					<li><a href="#" class="icon solid fa-heart"><%= article.likes %></a></li>
+					<li><a href="#" class="icon solid fa-comment"><%= article.dislikes %></a></li>
+				</ul>
+			</footer>
+		</article>
+	<% end %>
+	<ul class="actions pagination">
+		<li><a href="" class="disabled button large previous">Previous Page</a></li>
+		<li><a href="#" class="button large next">Next Page</a></li>
+	</ul>
 
-        	<ul class="actions pagination">
-								<li><a href="" class="disabled button large previous">Previous Page</a></li>
-								<li><a href="#" class="button large next">Next Page</a></li>
-							</ul>
+</div>
 
-					</div>
+<section id="sidebar">
 
-				<!-- Sidebar -->
-					<section id="sidebar">
+	<section id="intro">
+		<a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a>
+		<header>
+			<h2>Samuel Laforme</h2>
+		</header>
+	</section>
 
-						<!-- Intro -->
-							<section id="intro">
-								<a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a>
-								<header>
-									<h2>Samuel Laforme</h2>
-								</header>
-							</section>
+	<section>
+		<div class="mini-posts">
+			<article class="mini-post">
+				<header>
+					<h3><a href="single.html">Vitae sed condimentum</a></h3>
+					<time class="published" datetime="2015-10-20">October 20, 2015</time>
+					<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
+				</header>
+				<a href="single.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
+			</article>
 
-						<!-- Mini Posts -->
-							<section>
-								<div class="mini-posts">
+		</div>
+	</section>
 
-									<!-- Mini Post -->
-										<article class="mini-post">
-											<header>
-												<h3><a href="single.html">Vitae sed condimentum</a></h3>
-												<time class="published" datetime="2015-10-20">October 20, 2015</time>
-												<a href="#" class="author"><img src="images/avatar.jpg" alt="" /></a>
-											</header>
-											<a href="single.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
-										</article>
+	<section>
+		<ul class="posts">
+			<li>
+				<article>
+					<header>
+						<h3><a href="single.html">Lorem ipsum fermentum ut nisl vitae</a></h3>
+						<time class="published" datetime="2015-10-20">October 20, 2015</time>
+					</header>
+					<a href="single.html" class="image"><img src="images/pic08.jpg" alt="" /></a>
+				</article>
+			</li>
+		</ul>
+	</section>
 
-								</div>
-							</section>
-
-						<!-- Posts List -->
-							<section>
-								<ul class="posts">
-									<li>
-										<article>
-											<header>
-												<h3><a href="single.html">Lorem ipsum fermentum ut nisl vitae</a></h3>
-												<time class="published" datetime="2015-10-20">October 20, 2015</time>
-											</header>
-											<a href="single.html" class="image"><img src="images/pic08.jpg" alt="" /></a>
-										</article>
-									</li>
-								</ul>
-							</section>
-
-						<!-- About -->
-							<section class="blurb">
-								<h2>About</h2>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod amet placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at phasellus sed ultricies.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
-								</ul>
-							</section>
+	<section class="blurb">
+		<h2>About</h2>
+		<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod amet placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at phasellus sed ultricies.</p>
+		<ul class="actions">
+			<li><a href="#" class="button">Learn More</a></li>
+		</ul>
+	</section>
