added admin panel

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,6 @@
 			<header>
 				<div class="title">
 					<h2><a href="/article"><%= article.title %></a></h2>
-					<p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
 				</div>
 				<div class="meta">
 					<time class="published" datetime="2015-11-01">November 1, 2015</time>
@@ -15,7 +14,7 @@
 				</div>
 			</header>
 			<a href="/article" class="image featured"><img src="<%= article.image_url %>" alt="" /></a>
-			<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+			<div class="article-description"><%= raw article.article_text %></div>
 			<footer>
 				<ul class="actions">
 					<li><a href="/article" class="button large">Continue Reading</a></li>
