--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2747,7 +2747,7 @@ input, select, textarea {
 			display: flex;
 			border-bottom: solid 1px rgba(160, 160, 160, 0.3);
 			left: -3em;
-			margin: -3em 0 3em 0;
+			margin: -3em 0 1em 0;
 			position: relative;
 			width: calc(100% + 6em);
 		}
@@ -3611,3 +3611,11 @@ input, select, textarea {
 			}
 
 		}
+
+
+
+.article-description{
+	margin-bottom: 2em;
+	max-height: 100px;
+	overflow: hidden;
+}
