small cleanup in header and footer

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,5 @@
-<!-- Main -->
 <div id="main">
 
-    <!-- Post -->
 	<% @articles.each do |article| %>
 		<article class="post">
 			<header>
@@ -78,3 +76,4 @@
 			<li><a href="#" class="button">Learn More</a></li>
 		</ul>
 	</section>
+</div>
