--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -8,4 +8,6 @@
         </ul>
         <p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
     </section>
+
+    </section>
 </div>  
