--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,18 +4,18 @@
 		<article class="post">
 			<header>
 				<div class="title">
-					<h2><a href="/article"><%= article.title %></a></h2>
+					<h2><a href="/article/<%= article.id %>"><%= article.title %></a></h2>
 				</div>
 				<div class="meta">
 					<time class="published" datetime="2015-11-01">November 1, 2015</time>
 					<a href="#" class="author"><span class="name">Jane Doe</span><img src="images/avatar.jpg" alt="" /></a>
 				</div>
 			</header>
-			<a href="/article" class="image featured"><img src="<%= article.image_url %>" alt="" /></a>
+			<a href="/article/<%= article.id %>" class="image featured"><img src="<%= article.image_url %>" alt="" /></a>
 			<div class="article-description"><%= raw article.article_text %></div>
 			<footer>
 				<ul class="actions">
-					<li><a href="/article" class="button large">Continue Reading</a></li>
+					<li><a href="/article/<%= article.id %>" class="button large">Continue Reading</a></li>
 				</ul>
 				<ul class="stats">
 					<li><a href="#">General</a></li>
