--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= stylesheet_link_tag 'main' %>
     
     <%# stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    
+    <%= yield(:head) %>
   </head>
 
   <body>
