--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,10 +5,8 @@
 			<header>
 				<div class="title">
 					<h2><a href="/article/<%= article.id %>"><%= article.title %></a></h2>
-				</div>
-				<div class="meta">
-					<time class="published" datetime="2015-11-01">November 1, 2015</time>
-					<a href="#" class="author"><span class="name">Jane Doe</span><img src="images/avatar.jpg" alt="" /></a>
+					<time style="display:inline-block; width:49%;" class="published" datetime="2015-11-01">November 1, 2015</time>
+					<div style="display:inline-block; width:49%; text-align:right;" class="author-info"><a href="#" class="author"><span style="margin:0;" class="name">Jane Doe</span><img src="images/avatar.jpg" alt="" /></a></span>
 				</div>
 			</header>
 			<a href="/article/<%= article.id %>" class="image featured"><img src="<%= article.image_url %>" alt="" /></a>
