added some links to add article

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,6 +26,9 @@
 	<ul class="actions pagination">
 		<li><a href="" class="disabled button large previous">Previous Page</a></li>
 		<li><a href="#" class="button large next">Next Page</a></li>
+		<% if user_signed_in? %>
+			<li><%= link_to 'Add', new_article_path, class: "button large" %></li>
+		<% end %>
 	</ul>
 
 </div>
