--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'clear_wrapper' %>
+<% end %>
+
 <div id="main">
   <h1>New article</h1>
 
@@ -6,6 +10,6 @@
   <br>
 
   <div>
-    <%= link_to "Back to articles", articles_path %>
+    <%= link_to "Back to blog", root_path %>
   </div>
 </div>
