--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'clear_wrapper' %>
+<% end %>
+
 <div id="main">
   <p style="color: green"><%= notice %></p>
 
