--- a/app/views/home/article.html.erb
+++ b/app/views/home/article.html.erb
@@ -1,6 +1,6 @@
 
 <% content_for :head do%>
-    <% stylesheet_link_tag 'article' %>
+    <% stylesheet_link_tag 'clear_wrapper' %>
 <% end %>
 
 <!-- Main -->
