--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,6 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'clear_wrapper' %>
+<% end %>
 <div id="main">
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
