--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,9 +3,13 @@
 <% end %>
 
 <div id="main">
-  <p style="color: green"><%= notice %></p>
+  <% if notice %>
+    <p style="color: green"><%= notice %></p>
+  <% end %>
 
-  <%= render @article %>
+  <article class="post">
+    <%= render @article, author: @author %>
+  </article>
 
   <div>
     <%= link_to "Edit this article", edit_article_path(@article) %> |
