--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,10 +11,12 @@
     <%= render @article, author: @author %>
   </article>
 
-  <div>
-    <%= link_to "Edit this article", edit_article_path(@article) %> |
-    <%= link_to "Back to articles", articles_path %>
+  <% if is_author @author.id %>
+    <div>
+      <%= link_to "Edit this article", edit_article_path(@article) %> |
+      <%= link_to "Back to articles", articles_path %>
 
-    <%= button_to "Destroy this article", @article, method: :delete %>
-  </div>
+      <%= button_to "Destroy this article", @article, method: :delete %>
+    </div>
+  <% end %>
 </div>
