--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 					<h2><a href="/articles/<%= article.id %>"><%= article.title %></a></h2>
 				</div>
 				<div class="meta">
-					<time class="published" datetime="2015-11-01"><%= article.created_at.strftime '%d %B %Y' %></time>
+					<time class="published" datetime="2015-11-01"><%= get_date article.created_at %></time>
 					<% @authors.each do |author| %>
 						<%# Maybe I can use a helper to help me with that %>
 						<% if author.id == article.author_id %>
