--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -22,13 +22,9 @@
 </div>
 
 <footer>
-
   <ul class="stats">
-
-    <li><a href="#" class="icon solid fa-heart">28</a></li>
-    <li><a href="#" class="icon solid fa-comment">128</a></li>
-    
+    <li><a href="#" class="icon solid fa-heart"><%= article.likes %></a></li>
+    <li><a href="#" class="icon solid fa-comment"><%= article.dislikes %></a></li>
   </ul>
-
 </footer>
 
