--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,10 +1,15 @@
-<h1>Editing article</h1>
+<% content_for :head do %>
+  <% stylesheet_link_tag 'clear_wrapper' %>
+<% end %>
+<div class="main">
+  <h1>Editing article</h1>
 
-<%= render "form", article: @article %>
+  <%= render "form", article: @article %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Show this article", @article %> |
-  <%= link_to "Back to articles", articles_path %>
+  <div>
+    <%= link_to "Show this article", @article %> |
+    <%= link_to "Back to articles", articles_path %>
+  </div>
 </div>
