--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
 					<% end %>
 				</div>
 			</header>
-			<a href="/articles/<%= article.id %>" class="image featured"><img src="<%= article.image_url %>" alt="" /></a>
+			<a href="/articles/<%= article.id %>" class="image featured"><img class="featured-image" src="<%= article.image_url %>" alt="" /></a>
 			<div class="article-description"><%= raw article.article_text %></div>
 			<footer>
 				<ul class="actions">
