added turbo back + tried something with trix

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -24,3 +24,7 @@
     </div>
   <% end %>
 </div>
+
+<script>
+  document.getElementsByClassName('author-control')[0].style.justifyContent = 'flex-end'; 
+</script>
