--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,6 @@
+       <% content_for :head do %>
+	   	<%stylesheet_link_tag 'clear_wrapper' %>
+	   <% end %>
 							<article class="post">
 								<header>
 									<div class="title">
