--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,10 @@
     <%= csp_meta_tag %>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <%= stylesheet_link_tag 'main' %>
+    <%= stylesheet_link_tag 'application' %>
+    <%= javascript_importmap_tags %>
     
-    <%= yield(:head) %>
+    <%= yield :head %>
   </head>
 
   <body>
