--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,47 +1,49 @@
 <div id="wrapper">
 	<!-- Header -->
-		<header id="header">
-			<h1><a href="/">Samuel Laforme</a></h1>
-			<nav class="links">
-				<ul>
-					<li><a href="/">Blog</a></li>
-					<li><a href="/about">About</a></li>
-				</ul>
-			</nav>
-			<nav class="main">
-				<ul>
-					<li class="menu">
-						<a class="fa-bars" href="#menu"><i class="bi bi-person"></i></a>
+	<header id="header">
+		<h1><a href="/">Samuel Laforme</a></h1>
+		<nav class="links">
+			<ul>
+				<li><a href="/">Blog</a></li>
+				<li><a href="/about">About</a></li>
+			</ul>
+		</nav>
+		<nav class="main">
+			<ul>
+				<li class="menu">
+					<a class="fa-bars" href="#menu"><i class="bi bi-person"></i></a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+
+	<section id="menu">
+
+		<% if user_signed_in? %>
+			<section>
+				<ul class="links">
+					<li>
+						<h3><%= current_user.email %></h3>
 					</li>
-				</ul>
-			</nav>
-		</header>
-	<!-- Menu -->
-		<section id="menu">
-
-			<!-- Links -->
-				<section>
-					<ul class="links">
+					<% if is_author current_user.id %>
 						<li>
-							<a href="#">
-								<h3>Lorem ipsum</h3>
-								<p>Feugiat tempus veroeros dolor</p>
-							</a>
+							<%= get_author_name current_user.id %>
 						</li>
-					</ul>
-				</section>
+					<% end %>
+				</ul>
+			</section>
+		<% end %>
 
-			<!-- Actions -->
-				<section>
-					<ul class="actions stacked">
-						<% if user_signed_in? %>
-							<li><%= link_to "Profile", edit_user_registration_path, :class => "button large fit" %></li>
-							<li><%= button_to "Logout", destroy_user_session_path, method: :delete, :class => "button large fit" %></li>
-						<% else %>
-							<li><%= link_to "Register", new_user_registration_path, class: "button large fit" %></li>
-							<li><%= link_to "Login", new_user_session_path, class: "button large fit" %></li>
-						<% end %>
-					</ul>
-				</section>
-
+		<section>
+			<ul class="actions stacked">
+				<% if user_signed_in? %>
+					<li><%= link_to "Profile", edit_user_registration_path, :class => "button large fit" %></li>
+					<li><%= button_to "Logout", destroy_user_session_path, method: :delete, :class => "button large fit" %></li>
+				<% else %>
+					<li><%= link_to "Register", new_user_registration_path, class: "button large fit" %></li>
+					<li><%= link_to "Login", new_user_session_path, class: "button large fit" %></li>
+				<% end %>
+			</ul>
 		</section>
+
+	</section>
