add views column to article and increment

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3632,5 +3632,8 @@ input, select, textarea {
 .featured-image{
 	max-height: 400px;
 	object-fit: cover;
+}
 
+#error_explanation ul{
+	display:block;
 }
