--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -24,7 +24,7 @@
 <footer>
   <ul class="stats">
     <li><a href="#" class="icon solid fa-heart"><%= article.likes %></a></li>
-    <li><a href="#" class="icon solid fa-comment"><%= article.dislikes %></a></li>
+    <li><a href="#" class="icon solid fa-comment"><%= article.views %></a></li>
   </ul>
 </footer>
 
