--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,8 +26,8 @@
 					<li><a href="/articles/<%= article.id %>" class="button large">Continue Reading</a></li>
 				</ul>
 				<ul class="stats">
-					<li><a href="#" class="icon solid fa-heart"><%= article.likes %></a></li>
-					<li><a href="#" class="icon solid fa-comment"><%= article.dislikes %></a></li>
+					<li><a href="#" class="icon solid fa-heart"><i class="bi bi-hand-thumbs-up"></i> <%= article.likes %></a></li>
+					<li><i class="bi bi-eye"></i> <%= article.views %></li>
 				</ul>
 			</footer>
 		</article>
