--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -23,8 +23,8 @@
 
 <footer>
   <ul class="stats">
-    <li><a href="#" class="icon solid fa-heart"><%= article.likes %></a></li>
-    <li><a href="#" class="icon solid fa-comment"><%= article.views %></a></li>
+    <li><a href="#" class="icon solid fa-heart"><i class="bi bi-hand-thumbs-up"></i> <%= article.likes %></a></li>
+    <li><i class="bi bi-eye"></i> <%= article.views %></li>
   </ul>
 </footer>
 
